fix: change the alignment of the profile button

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -21,7 +21,7 @@
 @media screen and (min-width: 918px) {
   .profile__edit-button {
     position: relative;
-    top: 0;
+    top: -4px;
     left: 25px;
     width: 24px;
     height: 24px;
