--- a/blocks/profile/__name-wrap/profile__name-wrap.css
+++ b/blocks/profile/__name-wrap/profile__name-wrap.css
@@ -7,6 +7,6 @@
 @media screen and (min-width: 918px) {
   .profile__name-wrap {
     padding: 0;
-    align-items: baseline;
+    align-items: center;
   }
 }
